# window-title-getter

./: Cargo.toml
src/: main.rs
