[package]
name = "window-title-getter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
widestring = "0.5.1"

[dependencies.windows]
version = "0.23.0"
features = [
    "Win32_System_Com",
    "Win32_System_OleAutomation",
    "Win32_System_SystemServices",
    "Win32_System_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Foundation",
    "UI_UIAutomation_Core",
]
